# opendeck-akp03-soomfon

./: .gitignore  Cargo.toml  Darktable.s6.profile.json  README.md  justfile  manifest.json  release-check.sh  s6-8730DB781721.meta.json
darktable-plugin/: manifest.json
darktable-plugin/src/: main.rs
mirajazz/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  cliff.toml
mirajazz/examples/: akp03r.rs  akp153r.rs  n1.rs  watcher.rs
mirajazz/src/: device.rs  error.rs  images.rs  lib.rs  state.rs  types.rs
src/: device.rs  inputs.rs  main.rs  mappings.rs  midi.rs  watcher.rs
