[package]
name = "opendeck-akp03"
version = "0.8.0"
edition = "2024"

[dependencies]
data-url = "0.3.1"
futures-lite = "2.6.0"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg"] }
log = "0.4.27"
mirajazz = { path = "./mirajazz" }
openaction = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
midir = "0.10.1"
